reformat the note books

--- a/reg.ipynb
+++ b/reg.ipynb
@@ -16,7 +16,7 @@
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "from sklearn.pipeline import make_pipeline, Pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import cross_val_score\n"
+    "from sklearn.model_selection import cross_val_score"
    ]
   },
   {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "79cee592",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "5391f77f",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "77204281",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "dc8583e6",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "18ae7c8f",
    "metadata": {},
    "outputs": [
@@ -547,7 +547,7 @@
        "                ('linear', LinearRegression())])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "0703b9dc",
    "metadata": {},
    "outputs": [],
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "cec0cea1",
    "metadata": {},
    "outputs": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "1527d983",
    "metadata": {},
    "outputs": [
